cormorant: avoid calling listwalletdir rpc on initialization due to extremely slow response on windows